fix for code overflow scroll
*setting pre to overflow: hidden.

--- a/sass/_dronekit.scss
+++ b/sass/_dronekit.scss
@@ -165,6 +165,7 @@ a:hover{
 pre{
 	width: 100%;
 	border: 0px;
+  overflow: hidden;
 }
 
 .highlight{
